--- a/index.html
+++ b/index.html
@@ -738,10 +738,8 @@
                             Himalayan Exim</a>, All right reserved.</span>
                 </div>
                 <div class="col-md-6 my-auto text-center text-md-end text-white">
-                    <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                    <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                    <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                    Designed By <a class="border-bottom" href="https://web2export.com.com">web2export.com</a>
+                    
+                    Designed By <a class="border-bottom" href="https://web2export.com">web2export.com</a>
                 </div>
             </div>
         </div>
