--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
                         </div> -->
+                        <a href="all-product.html" class="nav-item nav-link  ">Our Products</a>
+                        <a href="service.html" class="nav-item nav-link">Our Services</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <!-- <div class="d-flex m-3 me-0">
