--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@ float: right;
     <!-- Contact Start -->
     <div class="container-fluid contact py-5">
         <div class="container py-5">
-            <div class="p-5 bg-light rounded">
+            <div class="px-2 bg-light rounded">
                 <div class="row g-4">
                     <div class="col-12">
                         <div class="text-center mx-auto" style="max-width: 700px;">
