--- a/contact.html
+++ b/contact.html
@@ -50,10 +50,10 @@
         <div class="container topbar bg-primary d-none d-lg-block">
             <div class="d-flex justify-content-between">
                 <div class="top-info ps-2">
-                    <small class="me-3"><i class="fas fa-map-marker-alt me-2 text-secondary"></i> <a href="#"
-                            class="text-white"> Himachal (Kullu)</a></small>
+                    <small class="me-3"><i class="fa fa-phone-alt   me-2 text-secondary" style="transform: rotate(102deg);"></i> <a href="#"
+                            class="text-white"> +91 8148800009</a></small>
                     <small class="me-3"><i class="fas fa-envelope me-2 text-secondary"></i><a href="#"
-                            class="text-white">+91 8148800009</a></small>
+                            class="text-white">gautamhimalayanexim@gmail.com</a></small>
                 </div>
                 <div class="top-link pe-2 w-50">
                     <marquee behavior="" class="py-3" direction="">
@@ -157,10 +157,11 @@ float: right;
                     </div>
                     <div class="col-lg-7">
                         <form action="" class="">
-                            <input type="text" class="w-100 form-control border-0 py-3 mb-4" placeholder="Your Name">
-                            <input type="email" class="w-100 form-control border-0 py-3 mb-4" placeholder="Enter Your Email">
-                            <textarea class="w-100 form-control border-0 mb-4" rows="5" cols="10" placeholder="Your Message"></textarea>
-                            <button class="w-100 btn form-control border-secondary py-3 bg-white text-primary " type="submit">Submit</button>
+                            <input type="text" class="w-100 form-control border-0 py-3 mb-4 name" placeholder="Your Name">
+                            <input type="email" class="w-100 form-control border-0 py-3 mb-4 email"  placeholder="Enter Your Email">
+                            <input type="number" class="w-100 form-control border-0 py-3 mb-4 phone" placeholder="Enter Your Number">
+                            <textarea class="w-100 form-control border-0 mb-4 message" rows="5" cols="10" placeholder="Your Message"></textarea>
+                            <button class="w-100 btn form-control border-secondary py-3 bg-white text-primary " onclick="contact()">Submit</button>
                         </form>
                     </div>
                     <div class="col-lg-5">
@@ -172,10 +173,10 @@ float: right;
                             </div>
                         </div>
                         <div class="d-flex p-4 rounded mb-4 bg-white">
-                            <i class="fa-brands fa-whatsapp fa-2x text-primary me-4"></i>
+                            <i class="fa-solid fa-envelope fa-2x text-primary me-4"></i>
                             <div>
-                                <h4>Whatsapp</h4>
-                                <p class="mb-2">+91 8148800009 </p>
+                                <h4>Email Id</h4>
+                                <p class="mb-2">gautamhimalayanexim@gmail.com </p>
                             </div>
                         </div>
                         <div class="d-flex p-4 rounded bg-white">
@@ -194,81 +195,82 @@ float: right;
 
 
 
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5">
-        <div class="container py-5">
-            <div class="pb-4 mb-4" style="border-bottom: 1px solid rgba(226, 175, 24, 0.5) ;">
-                <div class="row g-4">
-                    <div class="col-lg-3">
-                        <a href="#">
-                            <img src="image/logo/foot-logo.png" alt="">
-                        </a>
+   <!-- Footer Start -->
+   <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5">
+    <div class="container py-5">
+        <div class="pb-4 mb-4" style="border-bottom: 1px solid rgba(226, 175, 24, 0.5) ;">
+            <div class="row g-4">
+                <div class="col-lg-3">
+                    <a href="#">
+                        <img src="image/logo/foot-logo.png" alt="">
+                    </a>
+                </div>
+                <div class="col-lg-6">
+                    <div class="position-relative mx-auto">
+                        <input class="form-control border-0 w-100 py-3 px-4 rounded-pill" type="number"
+                            placeholder="Your Email">
+                        <button type="submit"
+                            class="btn btn-primary border-0 border-secondary py-3 px-4 position-absolute rounded-pill text-white"
+                            style="top: 0; right: 0;">Subscribe Now</button>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="position-relative mx-auto">
-                            <input class="form-control border-0 w-100 py-3 px-4 rounded-pill" type="number"
-                                placeholder="Your Email">
-                            <button type="submit"
-                                class="btn btn-primary border-0 border-secondary py-3 px-4 position-absolute rounded-pill text-white"
-                                style="top: 0; right: 0;">Subscribe Now</button>
-                        </div>
-                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="row g-5">
+            <div class="col-lg-3 col-md-6">
+                <div class="footer-item">
+                    <h4 class="text-light mb-3">About Us</h4>
+                    <p class="mb-4">Welcome to <a href="/">Gautam Himalayan Exim</a> We are a trusted supplier and
+                        exporter of a wide range of fresh, premium quality fruits ....</p>
+                    <a href="" class="btn border-secondary py-2 px-4 rounded-pill text-primary">Read More</a>
+                </div>
+            </div>
+            <div class="col-lg-2 col-md-6">
+                <div class="d-flex flex-column text-start footer-item">
+                    <h4 class="text-light mb-3">Links</h4>
+                    <a class="btn-link" href="">About Us</a>
+                    <a class="btn-link" href="">Contact Us</a>
+                    <a class="btn-link" href="">Products</a>
+                    <a class="btn-link" href="">Services</a>
 
                 </div>
             </div>
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <div class="footer-item">
-                        <h4 class="text-light mb-3">About Us</h4>
-                        <p class="mb-4">Welcome to <a href="/">Gautam Himalayan Exim</a> We are a trusted supplier and
-                            exporter of a wide range of fresh, premium quality fruits ....</p>
-                        <a href="" class="btn border-secondary py-2 px-4 rounded-pill text-primary">Read More</a>
-                    </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="d-flex flex-column text-start footer-item">
+                    <h4 class="text-light mb-3">Address</h4>
+                    <p>Himachal (Kullu)</p>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13540.930517622643!2d77.10099267209107!3d31.95458513428796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3904f6a95c673edb%3A0x40f8c144f79ad609!2sKullu%2C%20Himachal%20Pradesh%20175101!5e0!3m2!1sen!2sin!4v1739277146395!5m2!1sen!2sin"
+                        width="100%" height="100%" class="rounded shadow-lg" style="border:0;" allowfullscreen=""
+                        loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="d-flex flex-column text-start footer-item">
-                        <h4 class="text-light mb-3">Links</h4>
-                        <a class="btn-link" href="">About Us</a>
-                        <a class="btn-link" href="">Contact Us</a>
-                        <a class="btn-link" href="">Products</a>
-                        <a class="btn-link" href="">Services</a>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="footer-item">
+                    <h4 class="text-light mb-3">Contact</h4>
 
+
+                    <p>Phone: +91 8148800009</p>
+                    <p>Mail: <small>gautamhimalayanexim@gmail.com</small></p>
+
+                    <div class="d-flex   pt-3">
+                        <a class="btn  btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i
+                                class="fab fa-twitter"></i></a>
+                        <a class="btn btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i
+                                class="fab fa-youtube"></i></a>
+                        <a class="btn btn-outline-secondary btn-md-square rounded-circle" href=""><i
+                                class="fab fa-linkedin-in"></i></a>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="d-flex flex-column text-start footer-item">
-                        <h4 class="text-light mb-3">Address</h4>
-                        <p>Himachal (Kullu)</p>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13540.930517622643!2d77.10099267209107!3d31.95458513428796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3904f6a95c673edb%3A0x40f8c144f79ad609!2sKullu%2C%20Himachal%20Pradesh%20175101!5e0!3m2!1sen!2sin!4v1739277146395!5m2!1sen!2sin"
-                            width="100%" height="100%" class="rounded shadow-lg" style="border:0;" allowfullscreen=""
-                            loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="footer-item">
-                        <h4 class="text-light mb-3">Contact</h4>
 
-
-                        <p>Phone: +91 8148800009</p>
-
-                        <div class="d-flex   pt-3">
-                            <a class="btn  btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i
-                                    class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i
-                                    class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i
-                                    class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-secondary btn-md-square rounded-circle" href=""><i
-                                    class="fab fa-linkedin-in"></i></a>
-                        </div>
-
-                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Footer End -->
+</div>
+<!-- Footer End -->
 
     <!-- Copyright Start -->
     <div class="container-fluid copyright bg-dark py-4">
@@ -287,7 +289,22 @@ float: right;
     </div>
     <!-- Copyright End -->
 
-
+    <script>
+        function contact() {
+            var na = document.querySelector(".name").value;
+            var em = document.querySelector(".email").value;
+            var phone = document.querySelector(".phone").value;
+            var mes = document.querySelector(".message").value;
+            var url1 = "https://wa.me/918148800009?text=" +
+                "Name: " +
+                na + " " +
+                "Email: " +
+                em + " " +
+                "Phone :" + phone +
+                "Message :" + mes;
+            window.open(url1, "_blank").focus();
+        }
+    </script>
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i
