--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Gautam himalayan exim" name="keywords">
     <meta content="Gautam himalayan exim" name="description">
-
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
