--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
         </div>
         <div class="container px-0">
             <nav class="navbar navbar-light bg-white navbar-expand-xl">
-                <a href="index.html" class="navbar-brand"><img src="image/logo/logo-png.png" alt=""></a>
+                <a href="index.html" class="navbar-brand"><img src="image/logo/logo-png.png" height="100%" width="220px" alt=""></a>
                 <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars text-primary"></span>
