--- a/all-product.html
+++ b/all-product.html
@@ -285,82 +285,82 @@
 
 
 
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5">
-        <div class="container py-5">
-            <div class="pb-4 mb-4" style="border-bottom: 1px solid rgba(226, 175, 24, 0.5) ;">
-                <div class="row g-4">
-                    <div class="col-lg-3">
-                        <a href="#">
-                            <img src="image/logo/logo-png.png" alt="">
-                        </a>
+   <!-- Footer Start -->
+   <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5">
+    <div class="container py-5">
+        <div class="pb-4 mb-4" style="border-bottom: 1px solid rgba(226, 175, 24, 0.5) ;">
+            <div class="row g-4">
+                <div class="col-lg-3">
+                    <a href="#">
+                        <img src="image/logo/logo-png.png" alt="">
+                    </a>
+                </div>
+                <div class="col-lg-6">
+                    <div class="position-relative mx-auto">
+                        <input class="form-control border-0 w-100 py-3 px-4 rounded-pill" type="number"
+                            placeholder="Your Email">
+                        <button type="submit"
+                            class="btn btn-primary border-0 border-secondary py-3 px-4 position-absolute rounded-pill text-white"
+                            style="top: 0; right: 0;">Subscribe Now</button>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="position-relative mx-auto">
-                            <input class="form-control border-0 w-100 py-3 px-4 rounded-pill" type="number"
-                                placeholder="Your Email">
-                            <button type="submit"
-                                class="btn btn-primary border-0 border-secondary py-3 px-4 position-absolute rounded-pill text-white"
-                                style="top: 0; right: 0;">Subscribe Now</button>
-                        </div>
-                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="row g-5">
+            <div class="col-lg-3 col-md-6">
+                <div class="footer-item">
+                    <h4 class="text-light mb-3">About Us</h4>
+                    <p class="mb-4">Welcome to <a href="/">Gautam Himalayan Exim</a> We are a trusted supplier and
+                        exporter of a wide range of fresh, premium quality fruits ....</p>
+                    <a href="" class="btn border-secondary py-2 px-4 rounded-pill text-primary">Read More</a>
+                </div>
+            </div>
+            <div class="col-lg-2 col-md-6">
+                <div class="d-flex flex-column text-start footer-item">
+                    <h4 class="text-light mb-3">Links</h4>
+                    <a class="btn-link" href="about.html">About Us</a>
+                    <a class="btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn-link" href="all-product.html">Products</a>
+                    <a class="btn-link" href="service.html">Services</a>
 
                 </div>
             </div>
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <div class="footer-item">
-                        <h4 class="text-light mb-3">About Us</h4>
-                        <p class="mb-4">Welcome to <a href="/">Gautam Himalayan Exim</a> We are a trusted supplier and
-                            exporter of a wide range of fresh, premium quality fruits ....</p>
-                        <a href="" class="btn border-secondary py-2 px-4 rounded-pill text-primary">Read More</a>
-                    </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="d-flex flex-column text-start footer-item">
+                    <h4 class="text-light mb-3">Address</h4>
+                    <p> Village Gadouri ,Shamshi(35/85) ,kullu,Himachal Pradesh - 175126</p>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13540.930517622643!2d77.10099267209107!3d31.95458513428796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3904f6a95c673edb%3A0x40f8c144f79ad609!2sKullu%2C%20Himachal%20Pradesh%20175101!5e0!3m2!1sen!2sin!4v1739277146395!5m2!1sen!2sin"
+                        width="100%" height="100%" class="rounded shadow-lg" style="border:0;" allowfullscreen=""
+                        loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="col-lg-2 col-md-6">
-                    <div class="d-flex flex-column text-start footer-item">
-                        <h4 class="text-light mb-3">Links</h4>
-                        <a class="btn-link" href="about.html">About Us</a>
-                        <a class="btn-link" href="contact.html">Contact Us</a>
-                        <a class="btn-link" href="all-product.html">Products</a>
-                        <a class="btn-link" href="service.html">Services</a>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="footer-item">
+                    <h4 class="text-light mb-3">Contact</h4>
 
+
+                    <p>Phone: +91 9769753001</p>
+                    <p>Mail: <small>gautamhimalayanexim@gmail.com</small></p>
+
+                    <div class="d-flex   pt-3">
+                        <a class="btn  btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i
+                                class="fab fa-twitter"></i></a>
+                        <a class="btn btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i
+                                class="fab fa-youtube"></i></a>
+                        <a class="btn btn-outline-secondary btn-md-square rounded-circle" href=""><i
+                                class="fab fa-linkedin-in"></i></a>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="d-flex flex-column text-start footer-item">
-                        <h4 class="text-light mb-3">Address</h4>
-                        <p> Village-Gadouri,Shamshi(35/85),kullu,Himachal Pradesh - 175126</p>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13540.930517622643!2d77.10099267209107!3d31.95458513428796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3904f6a95c673edb%3A0x40f8c144f79ad609!2sKullu%2C%20Himachal%20Pradesh%20175101!5e0!3m2!1sen!2sin!4v1739277146395!5m2!1sen!2sin"
-                            width="100%" height="100%" class="rounded shadow-lg" style="border:0;" allowfullscreen=""
-                            loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="footer-item">
-                        <h4 class="text-light mb-3">Contact</h4>
 
-
-                        <p>Phone: +91 9769753001</p>
-                        <p>Mail: <small>gautamhimalayanexim@gmail.com</small></p>
-
-                        <div class="d-flex   pt-3">
-                            <a class="btn  btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i
-                                    class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i
-                                    class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i
-                                    class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-secondary btn-md-square rounded-circle" href=""><i
-                                    class="fab fa-linkedin-in"></i></a>
-                        </div>
-
-                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Footer End -->
+</div>
+<!-- Footer End -->
 
     <!-- Copyright Start -->
     <div class="container-fluid copyright bg-dark py-4">
