--- a/service.html
+++ b/service.html
@@ -278,7 +278,7 @@ float: right;
             <div class="col-lg-3 col-md-6">
                 <div class="d-flex flex-column text-start footer-item">
                     <h4 class="text-light mb-3">Address</h4>
-                    <p> Village-Gadouri,Shamshi(35/85),kullu,Himachal Pradesh - 175126</p>
+                    <p> Village Gadouri ,Shamshi(35/85) ,kullu,Himachal Pradesh - 175126</p>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13540.930517622643!2d77.10099267209107!3d31.95458513428796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3904f6a95c673edb%3A0x40f8c144f79ad609!2sKullu%2C%20Himachal%20Pradesh%20175101!5e0!3m2!1sen!2sin!4v1739277146395!5m2!1sen!2sin"
                         width="100%" height="100%" class="rounded shadow-lg" style="border:0;" allowfullscreen=""
@@ -309,7 +309,7 @@ float: right;
         </div>
     </div>
 </div>
-<!-- Footer End -->
+<!-- Footer End --> 
 
     <!-- Copyright Start -->
     <div class="container-fluid copyright bg-dark py-4">
